@@ -1,6 +1,6 @@
 .\" Copyright 1999 Red Hat Software, Inc.
 .\" Written by Michael K. Johnson <johnsonm@redhat.com>
-.TH pam_console 8 2000/7/11 "Red Hat" "System Administrator's Manual"
+.TH pam_console 8 2005/3/9 "Red Hat" "System Administrator's Manual"
 .SH NAME
 pam_console \- control permissions for users at the system console
 .SH SYNOPSIS
@@ -17,7 +17,8 @@ and authentication.
 
 When a user logs in at the console and \fBno other user is currently
 logged in at the console\fP, pam_console.so will change permissions
-and ownership of files as described in the file /etc/security/console.perms.
+and ownership of files as described in the file /etc/security/console.perms
+and run handler programs specified in the file /etc/security/console.handlers.
 That user may then log in on other terminals that are considered part
 of the console, and as long as the user is still logged in at any one
 of those terminals, that user will own those devices.  When the user
@@ -52,6 +53,9 @@ file than /etc/security/console.perms
 tells pam_console.so to read the table of configured filesystems from a
 file other than \fI/etc/fstab\fP when scanning \fIpermsfile\fP.  This file
 is used to map directories to device names.
+.IP handlersfile=\fIfilename\fP
+tells pam_console.so to get the list of the handlers from a different
+file than /etc/security/console.handlers
 .\" .IP glob
 .\" \fBnot yet implemented\fP interpret strings as globs instead of
 .\" regexp expressions.
@@ -82,6 +86,8 @@ session optional pam_console.so
 \fI/etc/security/console.apps\fP
 .br
 \fI/etc/security/console.perms\fP
+.br
+\fI/etc/security/console.handlers\fP
 .SH SECURITY NOTES
 When pam_console "auth" is used for login services which provide
 possibility of remote login, it is necessary to make sure the application
@@ -92,7 +98,8 @@ Currently, /bin/login (invoked from telnetd) and gdm is OK, others may be not.
 .br
 .BR console.apps (5)
 .br
-\fI/usr/share/doc/pam*/html/index.html\fP
+.BR console.handlers (5)
+.br
 .BR pam_console_apply (8)
 .br
 \fI/usr/share/doc/pam*/html/index.html\fP
